applications/Autodock/tmp/cov-capture/2024-10-08_01_35_15/diagnostics/2024-10-08_01_35_21.555307,cov-translate,stderr
[INFO] Compiling /home/hgx/omics/srilekhx/TransOmics.OpenOmicsInternal/applications/Autodock/input/1ac8/derived/eval.py as Python 3
[INFO] Expanded command line: /home/hgx/omics/srilekhx/coverity_scans/coverity/analysis/bin/cov-internal-python3-fe --dir /home/hgx/omics/srilekhx/TransOmics.OpenOmicsInternal/applications/Autodock/tmp --cov-emit-invocation-id 3 --link-file /home/hgx/omics/srilekhx/TransOmics.OpenOmicsInternal/applications/Autodock/tmp/tmp/cejf-e3563d27c4fe36f7b4c0d2336aed7bdd/frontend-emit-0.link /home/hgx/omics/srilekhx/TransOmics.OpenOmicsInternal/applications/Autodock/input/1ac8/derived/eval.py 
[INFO] Command line with response file: /home/hgx/omics/srilekhx/coverity_scans/coverity/analysis/bin/cov-internal-python3-fe @utf8@/home/hgx/omics/srilekhx/TransOmics.OpenOmicsInternal/applications/Autodock/tmp/tmp/cejf-e3563d27c4fe36f7b4c0d2336aed7bdd/fe-to-json-argfile-0.txt 
  File "/home/hgx/omics/srilekhx/TransOmics.OpenOmicsInternal/applications/Autodock/input/1ac8/derived/eval.py", line 138
    print 'energy:', energy
    ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
Failed to parse /home/hgx/omics/srilekhx/TransOmics.OpenOmicsInternal/applications/Autodock/input/1ac8/derived/eval.py as Python 3 code.
[ERROR] Source to JSON failed.
[ERROR] Failed to process source file /home/hgx/omics/srilekhx/TransOmics.OpenOmicsInternal/applications/Autodock/input/1ac8/derived/eval.py
WARNING: cov-internal-emit-misc returned with code 1 for file /home/hgx/omics/srilekhx/TransOmics.OpenOmicsInternal/applications/Autodock/input/1ac8/derived/eval.py (TU 72)
